Fix homepage grid alignment with correct number of items
This is a temporary fix. The homepage grid hardcodes the number of items which has recently changed and this has caused a misaligment. The permanent fix is to update the grid to the gem cards component which doesn't have this issue.

--- a/app/assets/stylesheets/views/_homepage.scss
+++ b/app/assets/stylesheets/views/_homepage.scss
@@ -145,17 +145,17 @@
 }
 
 .homepage-services-and-info__list {
-  @include columns($items: 17, $columns: 1, $selector: "li");
+  @include columns($items: 16, $columns: 1, $selector: "li");
   list-style: none;
   margin: 0 govuk-spacing(-3);
   padding: 0;
 
   @include govuk-media-query($from: "tablet") {
-    @include columns($items: 17, $columns: 2, $selector: "li");
+    @include columns($items: 16, $columns: 2, $selector: "li");
   }
 
   @include govuk-media-query($from: "desktop") {
-    @include columns($items: 17, $columns: 3, $selector: "li");
+    @include columns($items: 16, $columns: 3, $selector: "li");
   }
 
   .homepage-section__government-activity & {
